--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,12 +1,23 @@
 .form {
   display: flex;
+  flex-direction: column;
 }
 .form > * + * {
-  margin-left: 0.75rem;
+  margin-top: 0.75rem;
+  margin-left: 0;
 }
 .form__text-input {
   flex: 1 1 auto;
 }
 .form__button-submit {
   flex: 0 0 auto;
+}
+@media screen and (min-width: 48em) {
+  .form {
+    flex-direction: row;
+  }
+  .form > * + * {
+    margin-top: 0;
+    margin-left: 0.75rem;
+  }
 }
