--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -2,3 +2,30 @@
   list-style: none;
   overflow-y: auto;
 }
+
+/* Firefox */
+.list {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-primary-1) var(--color-neutral-1);
+}
+
+/* Chrome, Edge and Safari */
+.list::-webkit-scrollbar {
+  height: 0.875rem;
+  width: 0.875rem;
+}
+.list::-webkit-scrollbar-track {
+  border-radius: 0.25rem;
+  background-color: var(--color-neutral-1);
+}
+.list::-webkit-scrollbar-thumb {
+  border: 0.25rem solid var(--color-neutral-1);
+  border-radius: 0.75rem;
+  background-color: var(--color-primary-1);
+}
+.list::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-primary-2);
+}
+.list::-webkit-scrollbar-thumb:active {
+  background-color: var(--color-primary-3);
+}
